--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "watch": "sass --no-source-map --watch scss/bootstrap/bootstrap.scss:css/bootstrap.css"
+    "watch": "sass --no-source-map --watch scss/bootstrap/bootstrap.scss:css/bootstrap.css --style compressed"
   }
 }
